charon/tests/ui/unsupported/unbound-lifetime.out
error[E0261]: use of undeclared lifetime name `'a`
 --> tests/ui/unsupported/unbound-lifetime.rs:4:13
  |
4 | fn get(_x: &'a u32) {}
  |       -     ^^ undeclared lifetime
  |       |
  |       help: consider introducing lifetime `'a` here: `<'a>`

error: Could not find region: Region { kind: ReError(ErrorGuaranteed { todo: "ErrorGuaranteed(())" }) }
       
       Region vars map:
       {}
       
       Bound region vars:
       [[]]
 --> tests/ui/unsupported/unbound-lifetime.rs:4:1
  |
4 | fn get(_x: &'a u32) {}
  | ^^^^^^^^^^^^^^^^^^^

error: Ignoring the following function due to an error: test_crate::get
 --> tests/ui/unsupported/unbound-lifetime.rs:4:1
  |
4 | fn get(_x: &'a u32) {}
  | ^^^^^^^^^^^^^^^^^^^

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0261`.
[ ERROR charon_driver:192] The extraction encountered 2 errors
